Don't increase the reference count if dynamic_cast failed

If the dynamic_cast failed in QSharedPointer::dynamicCast or
qSharedPointerDynamicCast, we should avoid creating the QSharedPointer
that shares the weak and strong reference counts. In Qt 5, this does
not imply a leak since the original pointer is stored internally for
deletion. In Qt 4 it implies a leak under certain circumstances, which
this change fixes.

Task-number: QTBUG-28924
Change-Id: Id2de140de4cf676461e14b201ad250c53666b79d
(cherry-picked from qt5 commit a094bf5a893c3cccffff10c1420bfbe3a3c02a7c)
Reviewed-by: Olivier Goffart <ogoffart@woboq.com>