tests/auto/qsharedpointer/qsharedpointer.pro
@@ -3,9 +3,11 @@ load(qttest_p4)
 SOURCES += tst_qsharedpointer.cpp \
     forwarddeclaration.cpp \
     forwarddeclared.cpp \
+    nontracked.cpp \
     wrapper.cpp
 
 HEADERS += forwarddeclared.h \
+    nontracked.h \
     wrapper.h
 
 QT = core
