tests/auto/qsharedpointer/tst_qsharedpointer.cpp
@@ -48,6 +48,7 @@
 #include <QtCore/QVector>
 
 #include "externaltests.h"
+#include "nontracked.h"
 #include "wrapper.h"
 
 #include <stdlib.h>
@@ -89,6 +90,7 @@ private slots:
     void dynamicCastDifferentPointers();
     void dynamicCastVirtualBase();
     void dynamicCastFailure();
+    void dynamicCastFailureNoLeak();
 #endif
     void constCorrectness();
     void customDeleter();
@@ -1080,6 +1082,11 @@ void tst_QSharedPointer::dynamicCastFailure()
     }
     QCOMPARE(int(refCountData(baseptr)->weakref), 1);
     QCOMPARE(int(refCountData(baseptr)->strongref), 1);
+}
+
+void tst_QSharedPointer::dynamicCastFailureNoLeak()
+{
+    NonTracked::dynamicCastFailureNoLeak();
 }
 #endif
 
